# MemoryHandlingSystem

./: CMakeLists.txt  README.md
configurations/: system.config
memory_handler_lib/: CMakeLists.txt  headers.hpp
memory_handler_lib/header/: filesInfo.hpp  handler.hpp  logs.hpp  purgingService.hpp
memory_handler_lib/src/: filesInfo.cpp  handler.cpp  logs.cpp  purgingService.cpp
memory_handler_test/: main.cpp
service/: serviceInfo
